--- a/JeremyAnsel.Media.WavefrontObj/JeremyAnsel.Media.WavefrontObj/JeremyAnsel.Media.WavefrontObj.csproj
+++ b/JeremyAnsel.Media.WavefrontObj/JeremyAnsel.Media.WavefrontObj/JeremyAnsel.Media.WavefrontObj.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Equatable.Generator" Version="2.0.0" PrivateAssets="all" />
     <PackageReference Condition="'$(CI)' == 'True'" Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
